--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 />
             </div>
             <div class="modal__actions">
-                <button class="btn btn--passive">Cancel</button>
-                <button class="btn btn--success">Add</button>
+                <button class="btn btn--passive" id="btn--cancelMovie">Cancel</button>
+                <button class="btn btn--success" id="btn--confirmMovie">Add</button>
             </div>
         </div>
         <div class="modal" id="delete-modal">
@@ -45,7 +45,7 @@
 
         <header>
             <h1>Favorite Movies</h1>
-            <button>ADD MOVIE</button>
+            <button id="addMovie--botton">ADD MOVIE</button>
         </header>
 
         <main>
